service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dj-svc
  namespace: default
  labels:
    app.kubernetes.io/name: dvmn-minikube-dj-app
    app.kubernetes.io/instance: dvmn-minikube-dj-app-qwer
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    project: web
  ports:
    - protocol: TCP
      name: dj-app-listener
      port: 80
