ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host

spec:
  rules:
  - host: star-burger.test
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: dj-svc
              port:
                number: 80
